...
                                    const Text("Quiere ver tus colecciones.."),
                                    Row(
                                      mainAxisAlignment:
                                          MainAxisAlignment.spaceEvenly,
                                      children: [
                                        ElevatedButton(
                                          key: const Key('confirm'),
                                          onPressed: () {
                                            aceptar(solicitud);
                                          },
                                          style: ElevatedButton.styleFrom(
                                            backgroundColor: Colors.blue,
                                            shape: RoundedRectangleBorder(
...
